--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@stripe/stripe-js": "^5.2.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/stripe": "^8.0.417",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
